--- a/tutoriales.html
+++ b/tutoriales.html
@@ -2,10 +2,11 @@
 <html lang="es">
 <head>
     <meta charset="UTF-8">
-    <title>Tutoriales</title>
+    <title>RUSTKIPEDIA</title>
+    <link rel="stylesheet" href="tutoriales.css">
+    <link rel="icon" href="icon.jpeg" type="image/x-con">
 </head>
-<body style="background-color:lightblue; font: 100% sans-serif;">
-    <center>
+<body>
         <h1>10 mejores bases para rust Octubre 2024</h1>
 
     <p>Estas bases están pensada para todo tipos de grupos, preferiblemente mayores de 3 usuarios, o menos, si el usuario es ruso</p>
@@ -33,6 +34,5 @@
         <li><iframe width="560" height="315" src="https://www.youtube.com/embed/xU_eZsFkfu8?si=qQxitFOFxYgTgdOG" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe></li>
     </ol>
 </strong>
-</center>
 </body>
 </html>
