--- a/registro.html
+++ b/registro.html
@@ -1,9 +1,9 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="es">
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="icon" href="icon.jpeg" type="image/x-con">
+    <link rel="icon" href="logo.svg" type="image/x-con">
     <link rel="stylesheet" href="registro.css">
     <title>Registro RUSTKIPEDIA</title>
 </head>
@@ -39,7 +39,7 @@
         <br/>
     </fieldset>
     <br />
-        <label for="u_terms">Acepto los <a href="">términos y condiciones</a></label>
+        <label for="u_terms">Acepto los <a href="#">términos y condiciones</a></label>
         <input type="radio" id="u_terms">
     <br />
     <br/>
