--- a/tutoriales.html
+++ b/tutoriales.html
@@ -4,10 +4,10 @@
     <meta charset="UTF-8">
     <title>RUSTKIPEDIA</title>
     <link rel="stylesheet" href="tutoriales.css">
-    <link rel="icon" href="icon.jpeg" type="image/x-con">
+    <link rel="icon" href="logo.svg" type="image/x-con">
 </head>
 <body>
-        <h1>10 mejores bases para rust Octubre 2024</h1>
+        <h1>10 mejores bases para rust Abril 2025</h1>
 
     <p>Estas bases están pensada para todo tipos de grupos, preferiblemente mayores de 3 usuarios, o menos, si el usuario es ruso</p>
 
